<resources>
    <string name="app_name">WhatsappClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_chat">Group Chat</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="privacypolicy">PrivacyPolicy</string>
    <string name="about">About</string>
    <string name="invite_a_friend">Invite A Friend</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="coming_soon">Coming Soon</string>
</resources>